--- a/KotLinView/app/build.gradle
+++ b/KotLinView/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.0.0-RC3'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     testCompile 'junit:junit:4.12'
 }
 repositories {
