--- a/KotLinView/app/src/main/AndroidManifest.xml
+++ b/KotLinView/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PicActivity"></activity>
+        <activity android:name=".PicActivity" />
+        <activity android:name=".SaveActivity" />
+        <activity android:name=".AdviseActivity" />
+        <activity android:name=".WatchActivity"></activity>
     </application>
 
 </manifest>
