--- a/KotLinView/app/build.gradle
+++ b/KotLinView/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.facebook.fresco:fresco:0.9.0+'
     testCompile 'junit:junit:4.12'
 }
 repositories {
