--- a/KotLinView/app/src/main/AndroidManifest.xml
+++ b/KotLinView/app/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
     package="com.bwie.kotlinview">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
 
     <application
+        android:name="com.bwie.app.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_eye"
         android:label="@string/app_name"
