--- a/KotLinView/app/build.gradle
+++ b/KotLinView/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.bwie.kotlinview"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.jetbrains.anko:anko:0.10.0'
@@ -41,13 +43,10 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0-RC3'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.0-RC1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-
     compile 'com.github.leifzhang:IjkLib:0.4.4'
-
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'cn.jzvd:jiaozivideoplayer:6.2.3'
     testCompile 'junit:junit:4.12'
-
-
 }
 repositories {
     mavenCentral()
