--- a/KotLinView/app/src/main/AndroidManifest.xml
+++ b/KotLinView/app/src/main/AndroidManifest.xml
@@ -3,10 +3,8 @@
     package="com.bwie.kotlinview">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
 
     <application
         android:name="com.bwie.app.MyApp"
@@ -20,17 +18,20 @@
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShipingActivity"
+        <activity
+            android:name=".ShipingActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|uiMode"
-            android:theme="@style/AppTheme"></activity>
-     <!-- <activity android:name=".PicActivity" />-->
+            android:theme="@style/AppTheme" />
+        <!-- <activity android:name=".PicActivity" /> -->
         <activity android:name=".SaveActivity" />
         <activity android:name=".AdviseActivity" />
         <activity android:name=".WatchActivity" />
-        <activity android:name="com.bwie.view.DetailsActivity"></activity>
+        <activity android:name="com.bwie.view.DetailsActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
